data/derived/comb/progs/unify/prog4097.ml.out
Characters 59-82:
  | h::t -> cat h (listReverse (t));;
            ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
